Cabecera ajustada a los diferentes dispositivos

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <div class="contenedor">
         <nav class="navegacion">
-            <li class="nav-item">quién soy</li>
-            <li class="nav-item">acerca de mí</li>
-            <li class="nav-item">estudios</li>
-            <li class="nav-item">proyectos</li>
-            <li class="nav-item">habilidades</li>
+            <li class="nav-item"><a href="/index.html">quién soy</a></li>
+            <li class="nav-item"><a href="#acerca-mi">acerca de mí</a></li>
+            <li class="nav-item"><a href="#estudios">estudios</a></li>
+            <li class="nav-item"><a href="#proyectos">proyectos</a></li>
+            <li class="nav-item"><a href="#habilidades">habilidades</a></li>
         </nav>
         <div class="contenedor__menu-mbl">
             <svg viewBox="0 -0.5 21 21" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -60,52 +60,52 @@
             </div>
 
 
-            
 
-                <div class="contenido-principal__visual">
 
-                    <div class="contenido-principal__prs">
-                        <p class="contenido-principal__parrafo text-center">
-                            Jovén Caqueteño estudiante de ingeniería de sistemas del quinto semestre de la universidad
-                            de la Amazonia.
-                        </p>
-                        <p class="parrafo__ubi text-center">Florencia Caquetá, Colombia</p>
+            <div class="contenido-principal__visual">
 
-                        <div class="iconos-redes">
+                <div class="contenido-principal__prs">
+                    <p class="contenido-principal__parrafo text-center">
+                        Jovén Caqueteño estudiante de ingeniería de sistemas del quinto semestre de la universidad
+                        de la Amazonia.
+                    </p>
+                    <p class="parrafo__ubi text-center">Florencia Caquetá, Colombia</p>
 
-                            <a href="#" class="redes__psr">
+                    <div class="iconos-redes">
 
-                                <img class="redes__svg" src="/img/phone.png" alt="">
-                            </a>
-                            <a href="#" class="redes__psr">
+                        <a href="#" class="redes__psr">
 
-                                <img class="redes__svg" src="/img/email.png" alt="">
-                            </a>
-                            <a href="https://github.com/SamPaCe05" class="redes__psr">
+                            <img class="redes__svg" src="/img/phone.png" alt="">
+                        </a>
+                        <a href="#" class="redes__psr">
 
-                                <img class="redes__svg" src="/img/github.png" alt="">
-                            </a>
-                            <a href="#" class="redes__psr">
+                            <img class="redes__svg" src="/img/email.png" alt="">
+                        </a>
+                        <a href="https://github.com/SamPaCe05" class="redes__psr">
 
-                                <img class="redes__svg" src="/img/linkedin.png" alt="">
-                            </a>
+                            <img class="redes__svg" src="/img/github.png" alt="">
+                        </a>
+                        <a href="https://www.linkedin.com/in/samuel-padilla-cede%C3%B1o-240532320/" class="redes__psr">
 
-                        </div>
+                            <img class="redes__svg" src="/img/linkedin.png" alt="">
+                        </a>
 
                     </div>
 
                 </div>
 
-                <div class="presentacion-img">
-                    <img class="imagen-autor" src="/img/SamuelPadilla.jpg" alt="Imagen del autor"
-                        class="contenido-principal__img">
-                </div>
+            </div>
+
+            <div class="presentacion-img">
+                <img class="imagen-autor" src="/img/SamuelPadilla.jpg" alt="Imagen del autor"
+                    class="contenido-principal__img">
+            </div>
 
         </main>
 
     </header>
 
-    <article class="sobre-mi">
+    <article id="acerca-mi" class="sobre-mi">
 
         <section class="sobre-mi__info">
             <h2 class="info__titulo">
@@ -187,7 +187,7 @@
 
 
     <section class="habilidades">
-        <h2 class="habilidades__titulo">habilidades</h2>
+        <h2 id="habilidades" class="habilidades__titulo">habilidades</h2>
 
         <div class="habilidades__iconos">
 
