bento grid maqueteado, falta el contenido y las ideas del mismo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
     <div class="contenedor">
         <nav class="navegacion">
             <li class="nav-item"><a href="#yo">quién soy</a></li>
@@ -169,41 +168,41 @@
 
             <div class="cards">
 
-                <section class="card">
+                <section class="card card--1">
                     <h3 class="card__title">Lorem, ipsum.</h3>
                     <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error impedit iste
                         assumenda nam qui pariatur.</p>
                 </section>
 
-                <section class="card">
+                <section class="card card--2">
                     <h3 class="card__title">Lorem, ipsum.</h3>
                     <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic sunt soluta
                         libero
                         tempore, aliquid omnis.</p>
                 </section>
 
-                <section class="card">
+                <section class="card card--3">
                     <h3 class="card__title">Lorem, ipsum.</h3>
                     <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aspernatur
                         veniam
                         perferendis. Voluptatibus, eius atque!</p>
                 </section>
 
-                <section class="card">
+                <section class="card card--4">
                     <h3 class="card__title">Lorem, ipsum.</h3>
                     <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis incidunt,
                         natus
                         necessitatibus suscipit voluptatibus.</p>
                 </section>
 
-                <section class="card">
+                <section class="card card--5">
                     <h3 class="card__title">Lorem, ipsum.</h3>
                     <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis incidunt,
                         natus
                         necessitatibus suscipit voluptatibus.</p>
                 </section>
 
-                <section class="card">
+                <section class="card card--6">
                     <h3 class="card__title">Lorem, ipsum.</h3>
                     <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis incidunt,
                         natus
@@ -224,7 +223,8 @@
         <div>
 
             <h2 id="habilidades" class="habilidades__titulo text-center">habilidades</h2>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel modi deserunt sint sed, eos quod.</p>
+            <p class="text-center">Dominio de frameworks y lenguajes de programación para desarrollar aplicaciones web
+                eficientes y escalables.</p>
         </div>
 
         <div class="habilidades__iconos">
@@ -293,7 +293,6 @@
                                 fill="white" />
                         </svg>
                     </div>
-
 
 
                 </div>
