boton de navegación funcional en dispositivios menores a 1024px con JS, faltan animaciones

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 
     <div class="contenedor">
+
         <nav class="navegacion">
             <li class="nav-item"><a href="#yo">quién soy</a></li>
             <li class="nav-item"><a href="#acerca-mi">acerca de mí</a></li>
@@ -25,6 +26,7 @@
             <li class="nav-item"><a href="#proyectos">proyectos</a></li>
             <li class="nav-item"><a href="#habilidades">habilidades</a></li>
         </nav>
+
         <div class="contenedor__menu-mbl">
             <svg viewBox="0 -0.5 21 21" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000">
@@ -223,7 +225,8 @@
         <div>
 
             <h2 id="habilidades" class="habilidades__titulo text-center">habilidades</h2>
-            <p class="text-center">Dominio de frameworks y lenguajes de programación para desarrollar aplicaciones web
+            <p class="text-center">Habilidades básicas de frameworks y lenguajes de programación para desarrollar
+                aplicaciones web
                 eficientes y escalables.</p>
         </div>
 
@@ -445,8 +448,7 @@
     </footer>
 
 
-
-
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
