JS del footer funcional y pequeños errores de diseño arreglados

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="nav-item"><a href="#yo">quién soy</a></li>
             <li class="nav-item"><a href="#acerca-mi">acerca de mí</a></li>
             <li class="nav-item"><a href="#estudios">estudios</a></li>
-            <li class="nav-item"><a href="#proyectos">proyectos</a></li>
+            <li class="nav-item"><a href="#proyectos">intereses</a></li>
             <li class="nav-item"><a href="#habilidades">habilidades</a></li>
         </nav>
 
@@ -166,7 +166,8 @@
     <div class="padre-santo">
 
 
-        <section id="proyectos" class="proyectos">
+        <section id="intereses" class="intereses">
+            <h2 class="text-center">mis intereses</h2>
 
             <div class="cards">
 
@@ -225,9 +226,11 @@
         <div>
 
             <h2 id="habilidades" class="habilidades__titulo text-center">habilidades</h2>
-            <p class="text-center">Habilidades básicas de frameworks y lenguajes de programación para desarrollar
-                aplicaciones web
-                eficientes y escalables.</p>
+            <p class="text-center">La programación es mi pasión. Me encanta el desafío de transformar
+                ideas en realidad a través del código. Por eso, me dedico a aprender y mejorar constantemente mis
+                habilidades en frameworks y lenguajes de programación. Mi meta es convertirme en un experto en [menciona
+                un área específica, como desarrollador full-stack para crear aplicaciones web
+                robustas, escalables y con una excelente experiencia de usuario.</p>
         </div>
 
         <div class="habilidades__iconos">
