sección de intereses responsive y texto añadido. Producto terminado parcialmente :)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="nav-item"><a href="#yo">quién soy</a></li>
             <li class="nav-item"><a href="#acerca-mi">acerca de mí</a></li>
             <li class="nav-item"><a href="#estudios">estudios</a></li>
-            <li class="nav-item"><a href="#proyectos">intereses</a></li>
+            <li class="nav-item"><a href="#intereses">intereses</a></li>
             <li class="nav-item"><a href="#habilidades">habilidades</a></li>
         </nav>
 
@@ -117,12 +117,14 @@
                     <h2 class="info__titulo text-center">
                         acerca de mí
                     </h2>
-                    <p class="sobre-mi__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor totam
-                        dolorum
-                        voluptatem iste voluptates
-                        vitae repudiandae explicabo, perferendis rem delectus, ea eius tempora quis, tenetur libero
-                        consequuntur
-                        soluta quia? Quas incidunt sint cupiditate at perspiciatis ipsum rem modi? Magnam, ullam.</p>
+                    <p class="sobre-mi__text">Tengo 19 años y actualmente me encuentro cursando ingeniería
+                        de software
+                        en el quinto semestre en la universidad de la Amazonia, decidí estudiar esta carrera con el fin
+                        de
+                        alimentar la pasión por la informatica que traigo conmigo desde que era mucho más joven y
+                        adentrarme al
+                        entendimiento y diseño de sistemas con el fin de hallar solución a los problemas de manera
+                        eficiente y precisa.</p>
                 </section>
 
 
@@ -137,9 +139,11 @@
         <h2 class="estudios-titulo-princ text-center">Estudios</h2>
         <div class="contenedor__estudios contenedor__estudios--izq">
             <section class="estudios">
-                <h3 class="estudios__title text-center">bachillerato</h3>
-                <p class="estudios__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-                    consequatur quidem nam ad dicta ullam!</p>
+                <h3 class="estudios__title text-center">Pregrado</h3>
+                <p class="estudios__text text-center">Cursando hasta la fecha, con el fin de graduarme con honores y
+                    poder ejercer
+                    mi profesión de manera efectiva y eficiente.</p>
+
             </section>
         </div>
 
@@ -147,17 +151,20 @@
 
 
             <section class="estudios">
-                <h3 class="estudios__title text-center">bachillerato</h3>
-                <p class="estudios__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-                    consequatur quidem nam ad dicta ullam!</p>
+                <h3 class="estudios__title text-center">técnico</h3>
+                <p class="estudios__text text-center">Terminado en el año 2021, un técnico en contabilidad que me
+                    permitió aprender los fundamentos de la contabilidad, como el ciclo contable, los estados
+                    financieros y la normativa fiscal.
+                </p>
             </section>
         </div>
 
         <div class="contenedor__estudios contenedor__estudios--izq">
             <section class="estudios">
                 <h3 class="estudios__title text-center">bachillerato</h3>
-                <p class="estudios__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-                    consequatur quidem nam ad dicta ullam!</p>
+                <p class="estudios__text text-center">Terminado en el año 2021, graduado con honores y dando mis
+                    primeros pasos
+                    hacia la vida universitaria</p>
             </section>
         </div>
 
@@ -172,44 +179,38 @@
             <div class="cards">
 
                 <section class="card card--1">
-                    <h3 class="card__title">Lorem, ipsum.</h3>
-                    <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error impedit iste
-                        assumenda nam qui pariatur.</p>
+                    <h3 class="card__title">Programación</h3>
+                    <p class="card__text">Me lleva a resolver problemas de manera lógica y eficiente, lo cual me permite
+                        llevar mis conocimientos mucho más allá</p>
                 </section>
 
                 <section class="card card--2">
-                    <h3 class="card__title">Lorem, ipsum.</h3>
-                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic sunt soluta
-                        libero
-                        tempore, aliquid omnis.</p>
+                    <h3 class="card__title">Inglés</h3>
+                    <p class="card__text">El idioma extranjero me garantiza muchas puertas abiertas con el solo hecho de
+                        saberlo</p>
                 </section>
 
                 <section class="card card--3">
-                    <h3 class="card__title">Lorem, ipsum.</h3>
-                    <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aspernatur
-                        veniam
-                        perferendis. Voluptatibus, eius atque!</p>
+                    <h3 class="card__title">Volleyball</h3>
+                    <p class="card__text">Es un deporte con el que me siento cómodo practicandolo y siento destacar por
+                        mi esfuerzo y genética</p>
                 </section>
 
                 <section class="card card--4">
-                    <h3 class="card__title">Lorem, ipsum.</h3>
-                    <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis incidunt,
-                        natus
-                        necessitatibus suscipit voluptatibus.</p>
+                    <h3 class="card__title">Fotografía</h3>
+                    <p class="card__text">La fotografía para mí es como capto mis recuerdos de manera detallada y
+                        transmitir mi punto de vista sin palabras</p>
                 </section>
 
                 <section class="card card--5">
-                    <h3 class="card__title">Lorem, ipsum.</h3>
-                    <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis incidunt,
-                        natus
-                        necessitatibus suscipit voluptatibus.</p>
+                    <h3 class="card__title">Machine Learning</h3>
+                    <p class="card__text">enseñar a las computadoras para que aprendan de los datos y mejoren con la
+                        experiencia me parece fascinante</p>
                 </section>
 
                 <section class="card card--6">
-                    <h3 class="card__title">Lorem, ipsum.</h3>
-                    <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quis incidunt,
-                        natus
-                        necessitatibus suscipit voluptatibus.</p>
+                    <h3 class="card__title">Programación Web</h3>
+                    <p class="card__text">La programación web me parece el lugar perfecto para plasmar mis ideas</p>
                 </section>
 
             </div>
