olvidé poner los links del footer, el JS del menu funciona en responsive del pc pero no desde un celular usando un dominio, raro.

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
         <div class="redes__footer">
             <span>Pulsa Ctrl + x</span>
-            <a href="" class="link-svg none">
+            <a href="https://x.com/Samuel38647306" class="link-svg none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 1024 1024"
                     class="icon" version="1.1">
                     <path
@@ -462,7 +462,7 @@
         <div class="redes__footer">
             <span>Pulsa Ctr + i</span>
 
-            <a href="" class="link-svg none">
+            <a href="https://www.instagram.com/sampcd/" class="link-svg none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 32 32" fill="none">
                     <rect x="2" y="2" width="28" height="28" rx="6" fill="url(#paint0_radial_87_7153)" />
                     <rect x="2" y="2" width="28" height="28" rx="6" fill="url(#paint1_radial_87_7153)" />
@@ -503,7 +503,7 @@
         <div class="redes__footer">
             <span>Pulsa Ctrl + f</span>
 
-            <a href="" class="link-svg none">
+            <a href="https://www.facebook.com/samuel.padillacedeno" class="link-svg none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 1024 1024"
                     class="icon" version="1.1">
                     <path
