(Trabajo de Otra Materia) terminado de agregar elementos al json y cambiar intereses del html, falta la barra de nav en 480 que sigue bug

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 
                 <section class="sobre-mi__info">
-                    <h2 class="info__titulo text-center">
+                    <h2 class="info__titulo text-center" data-section="Acerca-mi" data-value="title-acerca">
                         acerca de mí
                     </h2>
                     <p class="sobre-mi__text" data-section="Acerca-mi" data-value="descripcion">Tengo 19 años y
@@ -282,43 +282,56 @@
 
 
         <section id="intereses" class="intereses">
-            <h2 class="text-center">mis intereses</h2>
+            <h2 class="text-center" data-section="intereses" data-value="title">mis intereses</h2>
 
             <div class="cards">
 
                 <section class="card card--1">
-                    <h3 class="card__title">Programación</h3>
-                    <p class="card__text">Me lleva a resolver problemas de manera lógica y eficiente, lo cual me permite
+                    <h3 class="card__title" data-section="intereses" data-value="title-pg">Programación</h3>
+                    <p class="card__text" data-section="intereses" data-value="programacion">Me lleva a resolver
+                        problemas de manera lógica y
+                        eficiente, lo cual me permite
                         llevar mis conocimientos mucho más allá</p>
                 </section>
 
                 <section class="card card--2">
-                    <h3 class="card__title">Inglés</h3>
-                    <p class="card__text">El idioma extranjero me garantiza muchas puertas abiertas con el solo hecho de
+                    <h3 class="card__title" data-section="intereses" data-value="title-in">Inglés</h3>
+                    <p class="card__text" data-section="intereses" data-value="ingles">El idioma extranjero me garantiza
+                        muchas puertas
+                        abiertas con el solo hecho de
                         saberlo</p>
                 </section>
 
                 <section class="card card--3">
-                    <h3 class="card__title">Volleyball</h3>
-                    <p class="card__text">Es un deporte con el que me siento cómodo practicandolo y siento destacar por
-                        mi esfuerzo y genética</p>
+                    <h3 class="card__title" data-section="intereses" data-value="title-lg">Liderazgo de Equipos de
+                        Desarrollo</h3>
+                    <p class="card__text" data-section="intereses" data-value="Liderazgo">Me apasiona el liderazgo de
+                        equipos de desarrollo
+                        porque me permite combinar
+                        mi interés por la tecnología con mi deseo de inspirar a otros a crear soluciones innovadoras y
+                        de alta calidad</p>
                 </section>
 
                 <section class="card card--4">
-                    <h3 class="card__title">Fotografía</h3>
-                    <p class="card__text">La fotografía para mí es como capto mis recuerdos de manera detallada y
+                    <h3 class="card__title" data-section="intereses" data-value="title-ft">Fotografía</h3>
+                    <p class="card__text" data-section="intereses" data-value="fotografia">La fotografía para mí es como
+                        capto mis recuerdos de
+                        manera detallada y
                         transmitir mi punto de vista sin palabras</p>
                 </section>
 
                 <section class="card card--5">
-                    <h3 class="card__title">Machine Learning</h3>
-                    <p class="card__text">enseñar a las computadoras para que aprendan de los datos y mejoren con la
+                    <h3 class="card__title" data-section="intereses" data-value="title-m">Machine Learning</h3>
+                    <p class="card__text" data-section="intereses" data-value="machine">Enseñar a las computadoras para
+                        que aprendan de los
+                        datos y mejoren con la
                         experiencia me parece fascinante</p>
                 </section>
 
                 <section class="card card--6">
-                    <h3 class="card__title">Programación Web</h3>
-                    <p class="card__text">La programación web me parece el lugar perfecto para plasmar mis ideas</p>
+                    <h3 class="card__title" data-section="intereses" data-value="title-pw">Programación Web</h3>
+                    <p class="card__text" data-section="intereses" data-value="programacion-web">La programación web me
+                        parece el lugar perfecto para plasmar mis ideas</p>
                 </section>
 
             </div>
